--- a/Backend/TTempleProject/pom.xml
+++ b/Backend/TTempleProject/pom.xml
@@ -17,6 +17,12 @@
 	</properties>
 	<dependencies>
 		<dependency>
+  			<!-- jsoup HTML parser library @ https://jsoup.org/ -->
+			<groupId>org.jsoup</groupId>
+ 			<artifactId>jsoup</artifactId>
+			<version>1.15.3</version>
+		</dependency>
+		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>31.1-jre</version>
