--- a/Backend/TTempleProject/pom.xml
+++ b/Backend/TTempleProject/pom.xml
@@ -17,6 +17,11 @@
 	</properties>
 	<dependencies>
 		<dependency>
+ 			<groupId>commons-io</groupId>
+  			<artifactId>commons-io</artifactId>
+  			<version>2.11.0</version>
+		</dependency>
+		<dependency>
   			<!-- jsoup HTML parser library @ https://jsoup.org/ -->
 			<groupId>org.jsoup</groupId>
  			<artifactId>jsoup</artifactId>
