--- a/Backend/TTempleProject/pom.xml
+++ b/Backend/TTempleProject/pom.xml
@@ -17,6 +17,12 @@
 	</properties>
 	<dependencies>
 		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version><!--$NO-MVN-MAN-VER$-->
+			<scope>test</scope>
+		</dependency>
+		<dependency>
  			<groupId>commons-io</groupId>
   			<artifactId>commons-io</artifactId>
   			<version>2.11.0</version>
