--- a/Backend/TTempleProject/pom.xml
+++ b/Backend/TTempleProject/pom.xml
@@ -22,6 +22,13 @@
 			<version>4.12</version><!--$NO-MVN-MAN-VER$-->
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+		<dependency>
+	    		<groupId>com.fasterxml.jackson.core</groupId>
+	    		<artifactId>jackson-databind</artifactId>
+	    		<version>2.13.4</version>
+		</dependency>
+		
 		<dependency>
  			<groupId>commons-io</groupId>
   			<artifactId>commons-io</artifactId>
