Added firebase backend api calls

--- a/Backend/TTempleProject/pom.xml
+++ b/Backend/TTempleProject/pom.xml
@@ -72,7 +72,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.24</version>
+			<version>1.18.24</version><!--$NO-MVN-MAN-VER$-->
 			<scope>provided</scope>
 		</dependency>
 
@@ -81,7 +81,6 @@
 			<groupId>com.google.firebase</groupId>
 			<artifactId>firebase-admin</artifactId>
 			<version>8.1.0</version>
-			<scope>runtime</scope>
 		</dependency>
 
 	</dependencies>
